Fix checkMetadataConsistency uassert error message

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.0-rc0, 7.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v7.0
    • Sharding EMEA 2023-04-17
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In these two uassert (1, 2) we wrongly mention "aggregate" command.

      Instead we should say somenthing like:

      "checkMetadataConsistency command on admin database can only be run without collection name. Found unexpected collection name: \{collName}"
      

            Assignee:
            Pol Pinol
            Reporter:
            Tommaso Tocci
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: