SERVER-75748 Fix checkMetadataConsistency uassert error message